--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -1,9 +1,92 @@
-<div class="{{pokemon.type[0].type.name}} min-h-screen">
-  <div class="flex justify-between">
-
+<div class="{{pokemon.type[0].type.name}} items-center">
+  <div class="flex justify-between text-white text-3xl p-5 items-center">
+    <fa-icon [icon]="faBack" routerLink="/pokedex" class="cursor-pointer"></fa-icon>
+    <fa-icon [icon]="faHeartRegular" class="cursor-pointer"></fa-icon>
   </div>
 
-  <div>
-
+  <div class="mt-5 text-white p-5">
+    <div class="justify-between flex text-center items-center">
+      <h1 class="text-3xl font-bold capitalize">{{pokemon.name}}</h1>
+      <h2 class="text-xl font-semibold">#{{pokemon.id.toString().padStart(3, 0)}}</h2>
+    </div>
+    <div class="flex mt-3">
+      <button *ngFor="let type of pokemon.type" class="h-6 w-16 mr-2 types rounded-2xl text-white">{{type.type.name}}</button>
+    </div>
   </div>
+
+  <div class="flex items-center">
+
+    <a href="/pokemon/{{pokemon.id-1}}"><fa-icon [icon]="faBack" class="cursor-pointer text-5xl hover:translate-x-3 transition-all text-black"></fa-icon></a>
+
+    <img class="object-cover m-auto w-56 -mb-8 pt-10" src="{{pokemon.sprites.other.dream_world.front_default !== null ? pokemon.sprites.other.dream_world.front_default : pokemon.sprites.front_default}}" alt="{{pokemon.name}}">
+
+    <a href="/pokemon/{{pokemon.id+1}}"><fa-icon [icon]="faRight" class="cursor-pointer text-5xl hover:translate-x-3 transition-all text-black"></fa-icon></a>
+  </div>
+
+  <div class="bg-white h-screen rounded-t-3xl items-center w-full md:w-2/4 m-auto xl:pb-32">
+    <div class="relative w-full h-full">
+
+      <div class="grid grid-cols-3 m-auto w-3/4 xl:w-2/4 items-center text-center pt-10">
+        <div class="m-auto border-r-slate-600 border-r-2 w-full">
+          <p class="font-semibold text-xl">{{pokemon.height}}lbs</p>
+          <h2 class="text-xs uppercase">Height</h2>
+        </div>
+        <div class="m-auto border-r-slate-600 border-r-2 w-full">
+          <p class="font-semibold text-lg">{{getWeight(pokemon.weight)}}kg</p>
+          <h2 class="text-xs uppercase">Weight</h2>
+        </div>
+        <div class="m-auto">
+          <p class="font-semibold text-lg">{{pokemon.moves.length}}</p>
+          <h2 class="text-xs uppercase">Moves</h2>
+        </div>
+      </div>
+
+      <div class="grid grid-cols-1 m-auto w-3/4 xl:w-full mt-10">
+
+        <h1 class="m-auto text-sm uppercase font-semibold">Abilities</h1>
+
+        <div class="grid xl:grid-cols-{{pokemon.abilities.length}} gap-3 mt-5">
+          <div *ngFor="let abilitie of pokemon.abilities" class="{{pokemon.type[0].type.name}} text-white rounded-lg w-3/4 xl:w-3/5 m-auto p-2 xl:border-b-0 text-center cursor-pointer hover:text-gray-200 transition-all">
+            <p class="font-semibold text-lg capitalize m-auto">{{abilitie.ability.name}}</p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="grid grid-cols-1 items-center text-center mt-10 m-auto w-full overflow-hidden">
+        <h1 class="m-auto text-sm uppercase font-semibold mb-10">Stats</h1>
+
+        <div class="xl:mt-5 m-auto">
+          <ngx-charts-bar-vertical
+          [view]="view1"
+          [scheme]="colorScheme"
+          [results]="single"
+          [gradient]="gradient"
+          [xAxis]="showXAxis"
+          [yAxis]="showYAxis"
+          [legend]="showLegend"
+          [showXAxisLabel]="showXAxisLabel"
+          [showYAxisLabel]="showYAxisLabel"
+          class="xl:block hidden">
+          </ngx-charts-bar-vertical>
+
+          <ngx-charts-bar-horizontal
+          [view]="view2"
+          [scheme]="colorScheme"
+          [results]="single"
+          [gradient]="gradient"
+          [xAxis]="showXAxis"
+          [yAxis]="showYAxis"
+          [showXAxisLabel]="showXAxisLabel"
+          [showYAxisLabel]="showYAxisLabel"
+          class="xl:hidden">
+          </ngx-charts-bar-horizontal>
+        </div>
+      </div>
+
+      <div class="grid items-center">
+        <h1 class="m-auto text-sm uppercase font-semibold">Shiny form</h1>
+        <img class="w-56 object-cover m-auto pt-3" src="{{pokemon.sprites.other.home.front_shiny !== null ? pokemon.sprites.other.home.front_shiny : pokemon.sprites.front_shiny}}" alt="{{pokemon.name}}">
+      </div>
+    </div>
 </div>
