--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -1,16 +1,9 @@
 <div class="bg-background_color min-h-screen items-center">
   <ais-instantsearch [config]="config" class="bg-[url('https://assets.pokemon.com/static2/_ui/img/chrome/body_bg.png')] min-h-screen items-center">
     <div class="grid grid-cols-1">
-      <div class="bg-background_color h-24 w-full xl:w-4/6 m-auto">
-        <div class="bg-[url('https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png')] w-full m-auto min-h-screen">
-          <div class="w-3/4 m-auto bg-background_color min-h-screen items-center flex">
-            <h1 class="pl-4 text-3xl text-white">Pokedex</h1>
-          </div>
-        </div>
-      </div>
 
       <div class="bg-background_color float-left m-auto items-center w-full xl:w-4/6">
-        <div class="grid grid-cols-1 xl:grid-cols-2">
+        <div class="grid grid-cols-1 xl:grid-cols-2 items-center">
 
           <div class="w-3/4 xl:w-4/6 h-2/4 xl:h-44 xl:ml-44 m-auto mt-5">
             <label for="name" class="text-3xl text-white">Name</label>
@@ -21,23 +14,21 @@
           </div>
 
           <div class="w-3/4 h-2/4 m-auto mt-10 mb-10">
-            <div class="bg-green-500 h-full p-3 rounded-md hover:bg-green-600 transition-all">
-              <h1 class="text-1xl text-white">Search for a Pokémon by name or using its National Pokédex number.</h1>
+            <div class="bg-green-500 h-full p-3 rounded-md hover:bg-green-600 transition-all items-center flex">
+              <h1 class="text-1xl text-white m-auto">Search for a Pokémon by name or using its National Pokédex number.</h1>
             </div>
           </div>
         </div>
       </div>
 
       <div>
-        <div class="bg-color_bar h-14 w-full xl:w-4/6 m-auto"></div>
-        <div class="bg-background_color min-h-screen w-full xl:w-4/6 m-auto relative items-center flex text-center">
-          <div class="bg-color_bar h-7 w-6/12 xl:w-1/3 m-auto rounded-b-3xl absolute left-1/4 xl:left-1/3 top-0">
-            <div class="bg-color_bar h-11 w-5 rounded-b-lg -rotate-45 -top-4 -left-1 absolute"></div>
-            <div class="bg-color_bar h-11 w-5 rounded-b-lg rotate-45 -top-4 -right-1 absolute"></div>
-
-            <h1 class="text-white text-sm xl:text-lg -mt-1 m-auto">Show advanced search</h1>
+        <div class="bg-color_bar h-14 w-full xl:w-4/6 m-auto">
+          <div class="grid items-center m-auto text-center h-full">
+            <h1 class="text-white text-2xl m-auto font-semibold">Pokedex</h1>
           </div>
+        </div>
 
+        <div class="bg-background_color w-full xl:w-4/6 m-auto relative items-center flex text-center">
           <div class="bg-[url('https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png')] min-h-screen w-full">
             <div class="bg-background_color w-3/4 min-h-screen m-auto">
               <ais-hits>
@@ -58,6 +49,7 @@
             </div>
           </div>
         <div>
+
       </div>
     </div>
   </div>
